src/styles/global.css
@import "tailwindcss";
@plugin "@tailwindcss/typography";

/* headers */
@font-face {
  font-family: "MuseoModerno";
  src: url("/src/assets/fonts/MuseoModerno-Medium.woff2") format("woff2"),
    url("/src/assets/fonts/MuseoModerno-Medium.woff") format("woff");
  font-weight: 500;
  font-style: normal;
  font-display: swap;
}
@font-face {
  font-family: "MuseoModerno";
  src: url("/src/assets/fonts/MuseoModerno-MediumItalic.woff2") format("woff2"),
    url("/src/assets/fonts/MuseoModerno-MediumItalic.woff") format("woff");
  font-weight: 500;
  font-style: italic;
  font-display: swap;
}

/* text: normal*/
@font-face {
  font-family: "Rubik";
  src: url("/src/assets/fonts/rubik-light-webfont.woff2") format("woff2"),
    url("/src/assets/fonts/rubik-light-webfont.woff") format("woff");
  font-weight: 300;
  font-style: normal;
  font-display: swap;
}
@font-face {
  font-family: "Rubik";
  src: url("/src/assets/fonts/rubik-regular-webfont.woff2") format("woff2"),
    url("/src/assets/fonts/rubik-regular-webfont.woff") format("woff");
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}
@font-face {
  font-family: "Rubik";
  src: url("/src/assets/fonts/rubik-medium-webfont.woff2") format("woff2"),
    url("/src/assets/fonts/rubik-medium-webfont.woff") format("woff");
  font-weight: 500;
  font-style: normal;
  font-display: swap;
}
@font-face {
  font-family: "Rubik";
  src: url("/src/assets/fonts/rubik-bold-webfont.woff2") format("woff2"),
    url("/src/assets/fonts/rubik-bold-webfont.woff") format("woff");
  font-weight: 700;
  font-style: normal;
  font-display: swap;
}

/* text: italic */
@font-face {
  font-family: "Rubik";
  src: url("/src/assets/fonts/rubik-lightitalic-webfont.woff2") format("woff2"),
    url("/src/assets/fonts/rubik-lightitalic-webfont.woff") format("woff");
  font-weight: 300;
  font-style: italic;
  font-display: swap;
}
@font-face {
  font-family: "Rubik";
  src: url("/src/assets/fonts/rubik-italic-webfont.woff2") format("woff2"),
    url("/src/assets/fonts/rubik-italic-webfont.woff") format("woff");
  font-weight: 400;
  font-style: italic;
  font-display: swap;
}
@font-face {
  font-family: "Rubik";
  src: url("/src/assets/fonts/rubik-mediumitalic-webfont.woff2") format("woff2"),
    url("/src/assets/fonts/rubik-mediumitalic-webfont.woff") format("woff");
  font-weight: 500;
  font-style: italic;
  font-display: swap;
}
@font-face {
  font-family: "Rubik";
  src: url("/src/assets/fonts/rubik-bolditalic-webfont.woff2") format("woff2"),
    url("/src/assets/fonts/rubik-bolditalic-webfont.woff") format("woff");
  font-weight: 700;
  font-style: italic;
  font-display: swap;
}

/* CODE */
@font-face {
  font-family: "Cascadia";
  src: url("/src/assets/fonts/cascadia-webfont.woff2") format("woff2"),
    url("/src/assets/fonts/cascadia-webfont.woff") format("woff");
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

@theme {
  --font-museo_moderno: "MuseoModerno", sans-serif;
  --font-rubik: "Rubik", system-ui, "sans-serif";
  --font-code: "Cascadia, ui-monospace, monospace";

  --color-mr-bg: #0b0b0e;
  --color-mr-text-headers: #f6efe5;
  --color-mr-text-content: #ddd8d1;
  --color-mr-text-relax: #c3bdb4;
  --color-mr-primary-green: #8ef91c;
  --color-mr-secondary-pink: #ec1564;
  --color-mr-neon-violet: #e22ef6;
  --color-mr-neon-pink: #ff33c4;
  --color-mr-neon-cosmic: #ff327d;
  --color-mr-neon-blue: #33afff;
  --color-mr-neon-lime: #d4fe34;
  --color-mr-neon-gold: #ffc733;
  --color-mr-neon-red: #ff4d4d;
  --color-mr-neon-orange: #ff8a33;
  --color-mr-neon-green: #afff33;
  --color-mr-neon-aqua: #33ffe8;
  --color-mr-bias-300: #c3b4c6;
  --color-mr-bias-500: #a58faa;
  --color-mr-bias-700: #756679;
  --color-mr-bias-category-perception: #f2ce57;
  --color-mr-bias-category-context: #9ed841;
  --color-mr-bias-category-judgment: #4c9dff;
  --color-mr-bias-category-memory: #af76ff;
  --color-mr-bias-category-speed: #e03d3d;
  --color-mr-error: #ef4444;
  --color-mr-warning: #eab308;
  --color-mr-success: #22c55e;

  --breakpoint-xs: 28.75rem;

  --text-xxs: 0.625rem;
  --text-xxs-line-height: 0.75rem;
}

/* COMPONENTS */
@layer base {
  html {
    @apply bg-mr-bg antialiased scroll-smooth;
  }
  body {
    @apply bg-mr-bg antialiased scroll-smooth;
  }
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    @apply font-museo_moderno tracking-wider text-mr-text-headers;
  }
  h1 {
    @apply text-2xl;
  }

  h2 {
    @apply text-xl;
  }
  h3 {
    @apply text-lg;
  }
  h4 {
    @apply text-base;
  }
  h5,
  h6 {
    @apply text-sm;
  }
  p {
    @apply font-rubik text-sm text-mr-text-content font-normal tracking-wide leading-relaxed;
  }
  a {
    @apply font-museo_moderno tracking-wider text-mr-text-headers;
  }
  blockquote {
    @apply font-rubik text-base border-l-2 pl-4 my-2 text-mr-text-relax;
  }
  li {
    @apply font-rubik text-sm text-mr-text-content font-normal tracking-wide leading-relaxed mb-2;
  }
  footer {
    @apply mt-auto;
  }
}

/* CUSTOM CLASSES */
@layer components {
  /* CUSTOM PROSE PLIGING */
  .custom-prose {
    @apply prose prose-invert prose-headings:text-mr-text-headers prose-strong:text-mr-text-content prose-h1:text-2xl prose-h2:text-xl prose-h3:text-lg prose-h4:text-base prose-h5:text-sm prose-h6:text-xs;
  }

  /* BODY */
  .body-layout-classes {
    @apply mx-auto p-5 px-3 max-w-3xl min-h-screen flex flex-col;
  }
  /* CODING STYLE */
  .coding {
    @apply font-code text-xs text-mr-text-content;
  }

  /* COVER IMAGES */
  .for-covers {
    @apply inline-block aspect-video w-full h-full overflow-hidden object-cover object-center rounded-lg;
  }

  /* IMAGES IN MDX */
  .for-images-in-mdx {
    @apply rounded-lg mt-0 w-5/6 h-auto place-self-center;
  }

  /* TO TOP BOTTON */
  .to-top-btn {
    @apply fixed bottom-5 right-5 w-8 h-8 rounded-full border border-green-500 bg-transparent text-green-500 hidden items-center justify-center;
  }

  /* TOGGLE HAMBURGER MENU */
  /* Toggle Menu: Mobile */
  .mobile-nav-toggle {
    @apply absolute block text-mr-primary-green z-10 w-6 h-6 aspect-square top-6 right-3 transform duration-500 ease-linear;
  }
  .mobile-nav-toggle[aria-expanded="true"] {
    @apply text-mr-neon-orange transform duration-500 ease-linear rotate-90;
  }
  .navigation-mobile-menu {
    @apply fixed top-0 right-0 w-2/3 h-2/4 rounded-b-xl rounded-tl-xl flex flex-col items-start justify-start pt-10 pl-4 gap-2 border border-mr-primary-green bg-mr-bg/10 backdrop-blur-md transform -translate-y-[500px] transition-transform duration-500 ease-out;
  }
  .navigation-mobile-menu[data-visible="true"] {
    @apply transform translate-y-0;
  }
  .navigation-mobile-link {
    @apply mb-0;
  }
  /* Toggle Menu: Desktop & Tablet */
  .navigation-desktop-menu {
    @apply flex justify-center items-center gap-4;
  }
  .navigation-desktop-link {
    @apply mb-0;
  }

  /* BIAS CATEGORIES */
  .speed-bias-category {
    @apply border py-0.5 px-1 w-fit rounded-lg tracking-widest capitalize text-xxs text-mr-bias-category-speed border-mr-bias-category-speed bg-mr-bias-category-speed/10;
  }
  .memory-bias-category {
    @apply border py-0.5 px-1 w-fit rounded-lg tracking-widest capitalize text-xxs text-mr-bias-category-memory border-mr-bias-category-memory bg-mr-bias-category-memory/10;
  }
  .judgment-bias-category {
    @apply border py-0.5 px-1 w-fit rounded-lg tracking-widest capitalize text-xxs text-mr-bias-category-judgment border-mr-bias-category-judgment bg-mr-bias-category-judgment/10;
  }
  .context-bias-category {
    @apply border py-0.5 px-1 w-fit rounded-lg tracking-widest capitalize text-xxs text-mr-bias-category-context border-mr-bias-category-context bg-mr-bias-category-context/10;
  }
  .perception-bias-category {
    @apply border py-0.5 px-1 w-fit rounded-lg tracking-widest capitalize text-xxs text-mr-bias-category-perception border-mr-bias-category-perception bg-mr-bias-category-perception/10;
  }
}

